--- a/sass/main.scss
+++ b/sass/main.scss
@@ -87,27 +87,62 @@ input[type=text]:focus {
 }
 
 
-.SinglePhoto{
-	margin: 0px auto;
-	display: block;
-	text-align: center;
-	color: black;
-	text-shadow: 0px 0px 10px grey;
-
-	.bio{
-		font-size: 16px;
-		background-color: rgba(255,255,255, .4);
-		border-radius: 10px;
-		text-shadow: none !important;
-	}
+.image {
+	width: 350px;
+	height: 350px;
+	border-radius: 20px;
+	background-color: grey;
+  opacity: 1;
+  display: block;
+  transition: .5s ease;
+  backface-visibility: hidden;
+	box-shadow: 0px 0px 10px black;
 }
 
-.top{
-	color: black;
-	text-shadow: 0px 0px 10px grey;
-	h2 p form{
-	display: inline;
-	vertical-align: middle;
+.image:hover{
+	opacity: 0.3;
+}
 
-	}
+#likeNumber{
+	display: inline;
+}
+
+.heart{
+	width: 30px;
+	height: 30px;
+}
+
+.heart:hover{
+	 filter: invert(70%);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+}
+
+.container:hover .overlay {
+  opacity: 1;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.info{
+	display: inline;
 }
